@@ -2,7 +2,6 @@ package com.rhynia.ochelper.util;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.rhynia.ochelper.accessor.PathAccessor;
-import com.rhynia.ochelper.config.CommonValue;
 import com.rhynia.ochelper.var.CommandPack;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -27,24 +26,23 @@ import java.util.stream.Stream;
 public class LuaScriptFactory {
 
     private final PathAccessor pa;
-    private final CommonValue cv;
 
     @Getter
     private final List<CommandPack> commonPackNormal = List.of(
             CommandPackEnum.AE_GET_ITEM.getPack(),
             CommandPackEnum.AE_GET_FLUID.getPack()
     );
+    private final String div = "\n";
     @Setter
     private boolean preloadCompleted = false;
     private String luaScriptsBase = "";
-    private List<CommandPack> commandPacks = Stream.of(CommandPackEnum.AE_GET_ITEM.getPack(), CommandPackEnum.AE_GET_FLUID.getPack()).collect(Collectors.toList());
+    private List<CommandPack> commandPacks = Stream.of(CommandPackEnum.AE_GET_ITEM.getPack(), CommandPackEnum.AE_GET_FLUID.getPack()).toList();
 
     public void initLuaScript() {
         commandPacks = Stream.of(CommandPackEnum.AE_GET_ITEM.getPack(), CommandPackEnum.AE_GET_FLUID.getPack()).collect(Collectors.toList());
         File filePath = new File(pa.getPath().getLuaScriptsPath());
         File[] fileList = filePath.listFiles();
         if (fileList != null) {
-            String div = "\n";
             StringBuilder builder = new StringBuilder();
             try {
                 for (File script : fileList) {
@@ -77,7 +75,6 @@ public class LuaScriptFactory {
         Map<String, String> map = new HashMap<>();
         if (!luaScriptsBase.isEmpty()) {
             String codeBase = luaScriptsBase;
-            String div = "\n";
             for (CommandPack cp : packs) {
                 String codeChunk = codeBase + div + cp.getCommand();
                 map.put(cp.getType(), codeChunk);
